2008-11-13  Masami Hiramatsu  <mhiramat@redhat.com>

	* utt.c (utt_trace_setup): Use KERN_WARNING and show buffer size.

2008-11-13  Masami Hiramatsu  <mhiramat@redhat.com>

	PR7016
	* utt.c (utt_trace_setup): Check freeram and bufferram before
	allocating relay buffers for avoiding OOM.

2008-11-12  Frank Ch. Eigler  <fche@elastic.org>

	* transport.c (_stp_cleanup_and_exit): Move debug print into
	one-time conditional block to prevent spew.

2008-10-07  Frank Ch. Eigler  <fche@elastic.org>

	PR 4886
	* symbols.c (_stp_do_relocation): Simplify processing of build-id
	note address.

2008-09-17  Frank Ch. Eigler  <fche@elastic.org>

	PR 6487, 6504.
	From Masami Hiramatsu <mhiramat@redhat.com>
	* utt.c (utt_switch_subbof, _utt_wakeup*, utt_reserve): New.

2008-07-17  Frank Ch. Eigler  <fche@elastic.org>

	* symbols.c (_stp_do_relocation): Adapt to stp_module decl changes.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 6738.
	* procfs.c (*): Remove code/data associated with symbol/unwind data
	uploading.
	(_stp_ctl_write_cmd): Support STP_RELOCATION message.
	(kbug): Replace calls with dbug_trans().
	* relayfs.c (kbug): Ditto.
	* transport.h: Corresponding changes.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 6736.
	* control.c (_stp_ctl_write_cmd): Accept STP_RELOCATION message.
	* symbols.c: Gutted file.
	(_stp_do_relocation): New function.
	* transport.c (_stp_transport_init): Corresponding changes.
	* transport_msgs.h: Ditto.

2008-07-09  Frank Ch. Eigler  <fche@elastic.org>

	PR5963
	* transport.c (_stp_work_queue): Don't signal a premature exit
	if a begin probe happened to exit().

2008-06-23  Wenji Huang  <wenji.huang@oracle.com>
	PR 6646
        * symbols.c (_stp_validate_addr): Revert the previous code.

2008-06-23  Wenji Huang  <wenji.huang@oracle.com>
	PR 6646
        * symbols.c (_stp_validate_addr): Add validating address in runtime.

2008-06-13  Wenji Huang  <wenji.huang@oracle.com>
